--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,26 @@ body {
 }
 
 /* Add correct CSS here for a grid overview */
+
+.tic-tac-toe-board {
+  width: 400px;
+  height: 400px;
+  margin: 400 auto;
+  background-color: #34495e;
+  color: #fff;
+  border: 6px solid #2c3e50;
+  border-radius: 10px;
+  display: grid;
+  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+}
+
+.box {
+  border: 6px solid #2c3e50;
+  border-radius: 2px;
+  font-family: Helvetica;
+  font-weight: bold;
+  font-size: 4em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
